# sistema_multiagente_wiki

./: .gitignore  README.md  artigo.md  pyproject.toml  requirements.txt
artigos/: artigo_20250412_234011.md
src/sistema_multiagente/: crew.py  main.py  run_crew.py
src/sistema_multiagente/config/: agents.yaml  tasks.yaml
src/sistema_multiagente/tools/: wikipedia_tool.py
